--- a/app/index.html
+++ b/app/index.html
@@ -3,6 +3,7 @@
 		<title>My three.js app</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
+		<link type="text/css" rel="stylesheet" href="main.css">
 		<style>
 			body {
 				margin: 0;
@@ -11,9 +12,42 @@
 		<script src="../build/bundle.js" defer></script>
 	</head>
 
-
-
-
 <body>
+	<div class="row">
+		<div class="column">
+		  <span class="description">Velocidade(Km/h)</span>
+		  <span class="value">100</span>
+		</div>
+		<div class="column">
+		  <span class="description">Pressão de corte</span>
+		  <span class="value">200</span>
+		</div>
+		<div class="column">
+		  <span class="description">Fertilizante</span>
+		  <span class="value">300</span>
+		</div>
+	  </div>
+
+
+	  <div class="bottom-row">
+		<div class="bottom-column">
+		  <div class="vertical-bar"></div>
+		</div>
+		<div class="bottom-column">
+		  <div class="vertical-bar"></div>
+		</div>
+		<div class="bottom-column">
+		  <div class="vertical-bar"></div>
+		</div>
+		<div class="bottom-column">
+		  <div class="vertical-bar"></div>
+		</div>
+		<div class="bottom-column">
+		  <div class="vertical-bar"></div>
+		</div>
+		<div class="bottom-column">
+		  <div class="vertical-bar"></div>
+		</div>
+	  </div>
 </body>
 </html>
