--- a/app/index.html
+++ b/app/index.html
@@ -9,7 +9,7 @@
 				margin: 0;
 			}
 		</style>
-		<script src="../build/bundle.js" defer></script>
+		<script src="bundle.js" defer></script>
 	</head>
 
 <body>
