--- a/app/index.html
+++ b/app/index.html
@@ -13,41 +13,27 @@
 	</head>
 
 <body>
-	<div class="row">
-		<div class="column">
-		  <span class="description">Velocidade(Km/h)</span>
-		  <span class="value">100</span>
-		</div>
-		<div class="column">
-		  <span class="description">Pressão de corte</span>
-		  <span class="value">200</span>
-		</div>
-		<div class="column">
-		  <span class="description">Fertilizante</span>
-		  <span class="value">300</span>
-		</div>
-	  </div>
 
+<div class="container">
+	<button class="btn">
+		<span class="title">fertilizante</span>
+		<span class="title">(kg/ha)</span>
+		<span class="number">150</span>
+	</button>
+	
+	<button class="btn2">
+		<span class="title">pressão de</span>
+		<span class="title">corte</span>
+		<span class="number">70%</span>
+	</button>
 
-	  <div class="bottom-row">
-		<div class="bottom-column">
-		  <div class="vertical-bar"></div>
-		</div>
-		<div class="bottom-column">
-		  <div class="vertical-bar"></div>
-		</div>
-		<div class="bottom-column">
-		  <div class="vertical-bar"></div>
-		</div>
-		<div class="bottom-column">
-		  <div class="vertical-bar"></div>
-		</div>
-		<div class="bottom-column">
-		  <div class="vertical-bar"></div>
-		</div>
-		<div class="bottom-column">
-		  <div class="vertical-bar"></div>
-		</div>
-	  </div>
+	<button class="btn3">
+		<span class="title">velocidade</span>
+		<span class="title">(km/h)</span>
+		<span class="number">3</span>
+	</button>
+
+</div>
+
 </body>
 </html>
