--- a/app/index.html
+++ b/app/index.html
@@ -27,10 +27,10 @@
 		<span class="number">70%</span>
 	</button>
 
-	<button class="btn3">
+	<button class="btn3"> 
 		<span class="title">velocidade</span>
 		<span class="title">(km/h)</span>
-		<span class="number">3</span>
+		<span id="velocidade" class="number">3</span>
 	</button>
 
 </div>
